--- a/grc/templates/submit-and-pay/check-your-answers.html
+++ b/grc/templates/submit-and-pay/check-your-answers.html
@@ -223,7 +223,7 @@
 
                 {{ check_your_answers_row(
                     title='Birth registered in UK',
-                    changeLinkHiddenText='whether your birth was regstered in the UK',
+                    changeLinkHiddenText='whether your birth was registered in the UK',
                     changeLinkUrlFor='birthRegistration.ukCheck',
                     value=(application_data.birth_registration_data.birth_registered_in_uk_formatted)
                 ) }}
