--- a/grc/templates/birth-registration/adopted.html
+++ b/grc/templates/birth-registration/adopted.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 {% import "govuk-design-system-templates/error-summary.html" as error_summary %}
 {% import "govuk-design-system-templates/radios.html" as radios %}
+{% import "govuk-design-system-templates/back_link.html" as back_link %}
+{% import "govuk-design-system-templates/continue.html" as continue %}
 
-{% block title %}Were you adopted?{% endblock %}
+{% block title %}{{ _('Were you adopted?') }}{% endblock %}
 
 {% block backLink %}
-    <a href="{{ back }}" class="govuk-back-link">Back</a>
+    {{ back_link.renderForRawURL(back) }}
 {% endblock %}
 
 {% block content %}
@@ -20,23 +22,16 @@
                 {{ radios.renderFor(
                     form,
                     fieldName='adopted',
-                    question="Were you adopted?",
+                    question=_("Were you adopted?"),
                     radiosOptions={
                         'questionIsPageHeading': true,
                         'hintOptions':{
-                            'htmlOrText': 'This information will help us find your original birth record.'
+                            'htmlOrText': _('This information will help us find your original birth record.')
                         }
                     }
                 ) }}
 
-                <div class="govuk-button-group">
-                    <button class="govuk-button" data-module="govuk-button">
-                        Save and continue
-                    </button>
-                    <a href="{{ url_for('taskList.index') }}" class="govuk-link govuk-link--no-visited-state">
-                        Return to task list
-                    </a>
-                </div>
+                {{ continue.renderForSaveAndContinue() }}
             </form>
 
         </div>
