--- a/grc/templates/birth-registration/check-your-answers.html
+++ b/grc/templates/birth-registration/check-your-answers.html
@@ -1,48 +1,50 @@
 {% extends 'base.html' %}
 {% import "govuk-design-system-templates/_summary-list-item.html" as summary_list_item %}
+{% import "govuk-design-system-templates/back_link.html" as back_link %}
+{% import "govuk-design-system-templates/continue.html" as continue %}
 
 {% macro check_your_answers_row(title, changeLinkHiddenText, changeLinkUrlFor, value) %}
     {{ summary_list_item.render(title, changeLinkHiddenText, url_for(changeLinkUrlFor, check_source='section', pages_from_check=1), value) }}
 {% endmacro %}
 
-{% block title %}Check your answers: Birth registration details{% endblock %}
+{% block title %}{{ _('Check your answers: Birth registration details') }}{% endblock %}
 
 {% block backLink %}
-    <a href="{{ back }}" class="govuk-back-link">Back</a>
+    {{ back_link.renderForRawURL(back) }}
 {% endblock %}
 
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-l">
-                <span class="govuk-caption-l">Check your answers:</span> Birth registration details
+                <span class="govuk-caption-l">{{ _('Check your answers:') }}</span> {{ _('Birth registration details') }}
             </h1>
 
             <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                 {{ check_your_answers_row(
-                    title='Birth name',
+                    title=_('Birth name'),
                     changeLinkHiddenText='birth name',
                     changeLinkUrlFor='birthRegistration.index',
                     value=(application_data.birth_registration_data.full_name)
                 ) }}
 
                 {{ check_your_answers_row(
-                    title='Date of birth',
+                    title=_('Date of birth'),
                     changeLinkHiddenText='date of birth',
                     changeLinkUrlFor='birthRegistration.dob',
                     value=(application_data.birth_registration_data.date_of_birth_formatted_DD_MMMM_YYYY)
                 ) }}
 
                 {{ check_your_answers_row(
-                    title='Birth registered in UK',
-                    changeLinkHiddenText='whether your birth was regstered in the UK',
+                    title=_('Birth registered in UK'),
+                    changeLinkHiddenText='whether your birth was registered in the UK',
                     changeLinkUrlFor='birthRegistration.ukCheck',
                     value=(application_data.birth_registration_data.birth_registered_in_uk_formatted)
                 ) }}
 
                 {% if application_data.birth_registration_data.birth_registered_in_uk %}
                     {{ check_your_answers_row(
-                        title='Town or city of birth',
+                        title=_('Town or city of birth'),
                         changeLinkHiddenText='your town or city of birth',
                         changeLinkUrlFor='birthRegistration.placeOfBirth',
                         value=(application_data.birth_registration_data.town_city_of_birth)
@@ -54,14 +56,14 @@
                         (Maiden name: {{ application_data.birth_registration_data.mothers_maiden_name }})
                     {% endmacro %}
                     {{ check_your_answers_row(
-                        title="Mother's name",
+                        title=_("Mother's name"),
                         changeLinkHiddenText="your mother's name",
                         changeLinkUrlFor='birthRegistration.mothersName',
                         value=mothersNameValue()
                     ) }}
 
                     {{ check_your_answers_row(
-                        title="Father's name listed",
+                        title=_("Father's name listed"),
                         changeLinkHiddenText="whether your father's name is listed on your birth or adoption certificate",
                         changeLinkUrlFor='birthRegistration.fathersNameCheck',
                         value=(application_data.birth_registration_data.fathers_name_on_birth_certificate_formatted)
@@ -69,7 +71,7 @@
 
                     {% if application_data.birth_registration_data.fathers_name_on_birth_certificate %}
                         {{ check_your_answers_row(
-                            title="Father's name",
+                            title=_("Father's name"),
                             changeLinkHiddenText="your father's name",
                             changeLinkUrlFor='birthRegistration.fathersName',
                             value=(application_data.birth_registration_data.fathers_first_name + ' ' + application_data.birth_registration_data.fathers_last_name)
@@ -77,7 +79,7 @@
                     {% endif %}
 
                     {{ check_your_answers_row(
-                        title="Adopted",
+                        title=_("Adopted"),
                         changeLinkHiddenText="whether you were adopted",
                         changeLinkUrlFor='birthRegistration.adopted',
                         value=(application_data.birth_registration_data.adopted_formatted)
@@ -85,7 +87,7 @@
 
                     {% if application_data.birth_registration_data.adopted %}
                         {{ check_your_answers_row(
-                            title="Adopted in UK",
+                            title=_("Adopted in UK"),
                             changeLinkHiddenText="whether you were adopted in the UK",
                             changeLinkUrlFor='birthRegistration.adoptedUK',
                             value=(application_data.birth_registration_data.adopted_in_the_uk_formatted)
@@ -93,8 +95,8 @@
                     {% endif %}
 
                     {{ check_your_answers_row(
-                        title="Forces registering service, British Consul or High Commission, or under
-                               Merchant Shipping or Civil Aviation provisions",
+                        title=_("Forces registering service, British Consul or High Commission, or under
+                               Merchant Shipping or Civil Aviation provisions"),
                         changeLinkHiddenText="whether your birth was registered under the Forces registering service,
                                               British Consul or High Commission, or under Merchant Shipping or Civil Aviation provisions",
                         changeLinkUrlFor='birthRegistration.forces',
@@ -103,7 +105,7 @@
 
                 {% else %}
                     {{ check_your_answers_row(
-                        title="Registered birth country",
+                        title=_("Registered birth country"),
                         changeLinkHiddenText="the country you were born in",
                         changeLinkUrlFor='birthRegistration.country',
                         value=(application_data.birth_registration_data.country_of_birth)
@@ -114,14 +116,7 @@
             <form method="POST" action="#">
                 {{ form.csrf_token }}
 
-                <div class="govuk-button-group">
-                    <button class="govuk-button" data-module="govuk-button">
-                        Save and continue
-                    </button>
-                    <a href="{{ url_for('taskList.index') }}" class="govuk-link govuk-link--no-visited-state">
-                        Return to task list
-                    </a>
-                </div>
+                {{ continue.renderForSaveAndContinue() }}
             </form>
 
         </div>
