--- a/grc/templates/birth-registration/dob.html
+++ b/grc/templates/birth-registration/dob.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 {% import "govuk-design-system-templates/error-summary.html" as error_summary %}
 {% import "govuk-design-system-templates/text-input.html" as textInput %}
+{% import "govuk-design-system-templates/back_link.html" as back_link %}
+{% import "govuk-design-system-templates/continue.html" as continue %}
 
-{% block title %}What is your date of birth?{% endblock %}
+{% block title %}{{ _('What is your date of birth?') }}{% endblock %}
 
 {% block backLink %}
-    <a href="{{ back }}" class="govuk-back-link">Back</a>
+    {{ back_link.renderForRawURL(back) }}
 {% endblock %}
 
 {% block content %}
@@ -22,12 +24,12 @@
                     <fieldset class="govuk-fieldset" role="group" aria-describedby="fieldset-hint">
                         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                             <h1 class="govuk-fieldset__heading">
-                                What is the date of birth on your birth or adoption certificate?
+                                {{ _('What is the date of birth on your birth or adoption certificate?') }}
                             </h1>
                         </legend>
 
                         <div class="govuk-hint" id="fieldset-hint">
-                            Enter the year in full - for example, 1987
+                            {{ _('Enter the year in full - for example, 1987') }}
                         </div>
 
                         {% if form.errors %}
@@ -48,7 +50,7 @@
                             <div class="govuk-date-input__item">
                                 <div class="govuk-form-group">
                                     <label for="day" class="govuk-label govuk-date-input__label">
-                                        Day
+                                        {{ _('Day') }}
                                     </label>
                                     <input type="text"
                                            id="day" name="day"
@@ -61,7 +63,7 @@
                             <div class="govuk-date-input__item">
                                 <div class="govuk-form-group">
                                     <label for="month" class="govuk-label govuk-date-input__label">
-                                        Month
+                                        {{ _('Month') }}
                                     </label>
                                     <input type="text"
                                            id="month" name="month"
@@ -74,7 +76,7 @@
                             <div class="govuk-date-input__item">
                                 <div class="govuk-form-group">
                                     <label for="year" class="govuk-label govuk-date-input__label">
-                                        Year
+                                        {{ _('Year') }}
                                     </label>
                                     <input type="text"
                                            id="year" name="year"
@@ -88,14 +90,7 @@
                     </fieldset>
                 </div>
 
-                <div class="govuk-button-group">
-                    <button class="govuk-button" data-module="govuk-button">
-                        Save and continue
-                    </button>
-                    <a href="{{ url_for('taskList.index') }}" class="govuk-link govuk-link--no-visited-state">
-                        Return to task list
-                    </a>
-                </div>
+                {{ continue.renderForSaveAndContinue() }}
             </form>
 
         </div>
