--- a/grc/templates/birth-registration/place-of-birth.html
+++ b/grc/templates/birth-registration/place-of-birth.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
+{% import "govuk-design-system-templates/back_link.html" as back_link %}
+{% import "govuk-design-system-templates/continue.html" as continue %}
 
-{% block title %}What is the town or city of birth on your birth or adoption certificate?{% endblock %}
+{% block title %}{{ _('What is the town or city of birth on your birth or adoption certificate?') }}{% endblock %}
 
 {% block backLink %}
-    <a href="{{ back }}" class="govuk-back-link">Back</a>
+    {{ back_link.renderForRawURL(back) }}
 {% endblock %}
 
 {% block content %}
@@ -23,7 +25,7 @@
                     fieldName='place_of_birth',
                     textInputForOptions={
                         'labelOptions': {
-                            'htmlOrText': 'What is the town or city of birth on your birth or adoption certificate?',
+                            'htmlOrText': _('What is the town or city of birth on your birth or adoption certificate?'),
                             'isPageHeading': true,
                             'classes': 'govuk-label--l'
                         },
@@ -31,14 +33,7 @@
                     }
                 ) }}
 
-                <div class="govuk-button-group">
-                    <button class="govuk-button" data-module="govuk-button">
-                        Save and continue
-                    </button>
-                    <a href="{{ url_for('taskList.index') }}" class="govuk-link govuk-link--no-visited-state">
-                        Return to task list
-                    </a>
-                </div>
+                {{ continue.renderForSaveAndContinue() }}
             </form>
 
         </div>
