--- a/grc/templates/govuk-design-system-templates/date.html
+++ b/grc/templates/govuk-design-system-templates/date.html
@@ -29,7 +29,7 @@
         <div class="govuk-date-input__item">
             <div class="govuk-form-group">
                 <label for="{{ form.day.name }}" class="govuk-label govuk-date-input__label">
-                    Day
+                    {{ _('Day') }}
                 </label>
                 <input type="text"
                        id="{{ form.day.name }}" name="{{ form.day.name }}"
@@ -42,7 +42,7 @@
         <div class="govuk-date-input__item">
             <div class="govuk-form-group">
                 <label for="{{ form.month.name }}" class="govuk-label govuk-date-input__label">
-                    Month
+                    {{ _('Month') }}
                 </label>
                 <input type="text"
                        id="{{ form.month.name }}" name="{{ form.month.name }}"
@@ -55,7 +55,7 @@
         <div class="govuk-date-input__item">
             <div class="govuk-form-group">
                 <label for="{{ form.year.name }}" class="govuk-label govuk-date-input__label">
-                    Year
+                    {{ _('Year') }}
                 </label>
                 <input type="text"
                        id="{{ form.year.name }}" name="{{ form.year.name }}"
